# projeto_integrador

./: .gitignore  01_scrapping.ipynb  dashboard.pbix  docker-compose.yaml  notes.md  pyproject.toml
notebooks/: 01_scrapping.ipynb  02_machine_learning.ipynb
src/: db.py  main.py
src/api/: __init__.py
src/db/: __init__.py
